--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+# This code is based on [localGPT], originally created by [PromptEngineer].
+# Modified by pphhyy0620 under the terms of the Apache License, Version 2.0.
+
 # Natural Language Processing
 langchain==0.0.191
 chromadb==0.3.22
